Rework for target branch changes
In the implemention of the possibility to change the target branch,&#10;there were some things missing.&#10;With this change, target branch changes will&#10;- create a system comment,&#10;- remove potential approvals, and&#10;- be checked for existing pull request with these branches and&#10;- the existence of differences

Pushed-by: Rene Pfeuffer<rene.pfeuffer@cloudogu.com>
Co-authored-by: René Pfeuffer<rene.pfeuffer@cloudogu.com>